<resources>
    <string name="app_name">Augmented Learn</string>
    <string name="developer_name">Abdullah Almasud</string>
    <string name="developer_website">https://almasud.github.io</string>
    <string name="report_email">almasud.arm@hotmail.com</string>
    <string name="learn_with_reality">Learn with Reality</string>
    <string name="real_view">"Real View"</string>
    <string name="service_download">"Download Service"</string>
    <string name="service_unzip">"Unzip Service"</string>
    <string name="notification_channel_download">Download Notification</string>
    <string name="notification_channel_unzip">Unzip Notification</string>
    <string name="language_bengali">বাংলা</string>
    <string name="language_english">English</string>
    <string name="action_share">Share</string>
    <string name="more">More</string>
    <string name="action_check_update">Check for update</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_report">Report a problem</string>
    <string name="action_about">About</string>
    <string name="action_get_ar_book">Have no AR book?</string>
    <string name="learn">Learn</string>
    <string name="test">Test</string>
    <string name="scan">Scan</string>
    <string name="vowel_bengali">স্বরবর্ণ</string>
    <string name="alphabet_bengali">ব্যঞ্জনবর্ণ</string>
    <string name="number_bengali">সংখ্যা</string>
    <string name="alphabet_english">Alphabet</string>
    <string name="number_english">Number</string>
    <string name="animal_english">Animal</string>
    <string name="scan_book">Scan Book</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="okay_understand">Okay, I understand</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_not_sure">Not Sure</string>
    <string name="action_close">Close</string>
    <string name="action_test_again">Test Again</string>
    <string name="action_update_now">Update Now</string>
    <string name="action_get_from_website">Get from website</string>
    <string name="action_get_from_play_store">Get from Play Store</string>
    <string name="action_update_later">Update Later</string>
    <string name="bn_vowel_01">অ</string>
    <string name="bn_vowel_02">আ</string>
    <string name="bn_vowel_03">ই</string>
    <string name="bn_vowel_04">ঈ</string>
    <string name="bn_vowel_05">উ</string>
    <string name="bn_vowel_06">ঊ</string>
    <string name="bn_vowel_07">ঋ</string>
    <string name="bn_vowel_08">এ</string>
    <string name="bn_vowel_09">ঐ</string>
    <string name="bn_vowel_10">ও</string>
    <string name="bn_vowel_11">ঔ</string>
    <string name="bn_vowel_01_extra">অলি</string>
    <string name="bn_vowel_02_extra">আম</string>
    <string name="bn_vowel_03_extra">ইলিশ</string>
    <string name="bn_vowel_04_extra">ঈগল</string>
    <string name="bn_vowel_05_extra">উট</string>
    <string name="bn_vowel_06_extra">ঊষা</string>
    <string name="bn_vowel_07_extra">ঋতু</string>
    <string name="bn_vowel_08_extra">একতারা</string>
    <string name="bn_vowel_09_extra">ঐরাবত</string>
    <string name="bn_vowel_10_extra">ওল</string>
    <string name="bn_vowel_11_extra">ঔষধ</string>
    <string name="bn_alphabet_01">ক</string>
    <string name="bn_alphabet_02">খ</string>
    <string name="bn_alphabet_03">গ</string>
    <string name="bn_alphabet_04">ঘ</string>
    <string name="bn_alphabet_05">ঙ</string>
    <string name="bn_alphabet_06">চ</string>
    <string name="bn_alphabet_07">ছ</string>
    <string name="bn_alphabet_08">জ</string>
    <string name="bn_alphabet_09">ঝ</string>
    <string name="bn_alphabet_10">ঞ</string>
    <string name="bn_alphabet_11">ট</string>
    <string name="bn_alphabet_12">ঠ</string>
    <string name="bn_alphabet_13">ড</string>
    <string name="bn_alphabet_14">ঢ</string>
    <string name="bn_alphabet_15">ণ</string>
    <string name="bn_alphabet_16">ত</string>
    <string name="bn_alphabet_17">থ</string>
    <string name="bn_alphabet_18">দ</string>
    <string name="bn_alphabet_19">ধ</string>
    <string name="bn_alphabet_20">ন</string>
    <string name="bn_alphabet_21">প</string>
    <string name="bn_alphabet_22">ফ</string>
    <string name="bn_alphabet_23">ব</string>
    <string name="bn_alphabet_24">ভ</string>
    <string name="bn_alphabet_25">ম</string>
    <string name="bn_alphabet_26">য</string>
    <string name="bn_alphabet_27">র</string>
    <string name="bn_alphabet_28">ল</string>
    <string name="bn_alphabet_29">শ</string>
    <string name="bn_alphabet_30">ষ</string>
    <string name="bn_alphabet_31">স</string>
    <string name="bn_alphabet_32">হ</string>
    <string name="bn_alphabet_33">ড়</string>
    <string name="bn_alphabet_34">ঢ়</string>
    <string name="bn_alphabet_35">য়</string>
    <string name="bn_alphabet_36">ৎ</string>
    <string name="bn_alphabet_37">ং</string>
    <string name="bn_alphabet_38">ঃ</string>
    <string name="bn_alphabet_39">ঁ</string>
    <string name="bn_alphabet_01_extra">কলম</string>
    <string name="bn_alphabet_02_extra">খরগোশ</string>
    <string name="bn_alphabet_03_extra">গরু</string>
    <string name="bn_alphabet_04_extra">ঘোড়া</string>
    <string name="bn_alphabet_05_extra">ব্যাঙ</string>
    <string name="bn_alphabet_06_extra">চশমা</string>
    <string name="bn_alphabet_07_extra">ছাতা</string>
    <string name="bn_alphabet_08_extra">জাহাজ</string>
    <string name="bn_alphabet_09_extra">ঝাড়ু</string>
    <string name="bn_alphabet_10_extra">মিঞা</string>
    <string name="bn_alphabet_11_extra">টিয়া</string>
    <string name="bn_alphabet_12_extra">ঠেলাগাড়ি</string>
    <string name="bn_alphabet_13_extra">ডাব</string>
    <string name="bn_alphabet_14_extra">ঢোল</string>
    <string name="bn_alphabet_15_extra">হরিণ</string>
    <string name="bn_alphabet_16_extra">তবলা</string>
    <string name="bn_alphabet_17_extra">থালা</string>
    <string name="bn_alphabet_18_extra">দই</string>
    <string name="bn_alphabet_19_extra">ধান</string>
    <string name="bn_alphabet_20_extra">নৌকা</string>
    <string name="bn_alphabet_21_extra">পাতা</string>
    <string name="bn_alphabet_22_extra">ফল</string>
    <string name="bn_alphabet_23_extra">বিড়াল</string>
    <string name="bn_alphabet_24_extra">ভালুক</string>
    <string name="bn_alphabet_25_extra">মিষ্টি</string>
    <string name="bn_alphabet_26_extra">যব</string>
    <string name="bn_alphabet_27_extra">রাণী</string>
    <string name="bn_alphabet_28_extra">লাল</string>
    <string name="bn_alphabet_29_extra">শসা</string>
    <string name="bn_alphabet_30_extra">ষাঁড়</string>
    <string name="bn_alphabet_31_extra">সিংহ</string>
    <string name="bn_alphabet_32_extra">হাতি</string>
    <string name="bn_alphabet_34_extra">ঢ়</string>
    <string name="bn_alphabet_35_extra">পায়রা</string>
    <string name="bn_alphabet_36_extra">শরৎ</string>
    <string name="bn_alphabet_37_extra">চিংড়ি</string>
    <string name="bn_alphabet_38_extra">দুঃখ</string>
    <string name="bn_alphabet_39_extra">চাঁদ</string>
    <string name="bn_number_1">এক</string>
    <string name="bn_number_2">দুই</string>
    <string name="bn_number_3">তিন</string>
    <string name="bn_number_4">চার</string>
    <string name="bn_number_5">পাঁচ</string>
    <string name="bn_number_6">ছয়</string>
    <string name="bn_number_7">সাত</string>
    <string name="bn_number_8">আট</string>
    <string name="bn_number_9">নয়</string>
    <string name="capital_a">A</string>
    <string name="capital_b">B</string>
    <string name="capital_c">C</string>
    <string name="capital_d">D</string>
    <string name="capital_e">E</string>
    <string name="capital_f">F</string>
    <string name="capital_g">G</string>
    <string name="capital_h">H</string>
    <string name="capital_i">I</string>
    <string name="capital_j">J</string>
    <string name="capital_k">K</string>
    <string name="capital_l">L</string>
    <string name="capital_m">M</string>
    <string name="capital_n">N</string>
    <string name="capital_o">O</string>
    <string name="capital_p">P</string>
    <string name="capital_q">Q</string>
    <string name="capital_r">R</string>
    <string name="capital_s">S</string>
    <string name="capital_t">T</string>
    <string name="capital_u">U</string>
    <string name="capital_v">V</string>
    <string name="capital_w">W</string>
    <string name="capital_x">X</string>
    <string name="capital_y">Y</string>
    <string name="capital_z">Jet</string>
    <string name="alphabet_apple">Apple</string>
    <string name="alphabet_ball">Ball</string>
    <string name="alphabet_fish">Fish</string>
    <string name="alphabet_goat">Goat</string>
    <string name="alphabet_ice_cream">Ice-cream</string>
    <string name="alphabet_jackfruit">Jackfruit</string>
    <string name="alphabet_kite">Kite</string>
    <string name="alphabet_mango">Mango</string>
    <string name="alphabet_nest">Nest</string>
    <string name="alphabet_orange">Orange</string>
    <string name="alphabet_parrot">Parrot</string>
    <string name="alphabet_queen">Queen</string>
    <string name="alphabet__rainbow">Rainbow</string>
    <string name="alphabet_sweet">Sweet</string>
    <string name="alphabet_tiger">Tiger</string>
    <string name="alphabet_umbrella">Umbrella</string>
    <string name="alphabet_vegetable">Vegetable</string>
    <string name="alphabet_water">Water</string>
    <string name="alphabet_x_ray">X-ray</string>
    <string name="alphabet_yak">Yak</string>
    <string name="alphabet_zebra">Zebra</string>
    <string name="number_one">One</string>
    <string name="number_two">Two</string>
    <string name="number_three">Three</string>
    <string name="number_four">Four</string>
    <string name="number_five">Five</string>
    <string name="number_six">Six</string>
    <string name="number_seven">Seven</string>
    <string name="number_eight">Eight</string>
    <string name="number_nine">Nine</string>
    <string name="bear">Bear</string>
    <string name="cat">Cat</string>
    <string name="cow">Cow</string>
    <string name="dog">Dog</string>
    <string name="elephant">Elephant</string>
    <string name="hippopotamus">Hippopotamus</string>
    <string name="horse">Horse</string>
    <string name="lion">Lion</string>
    <string name="deer">Deer</string>
    <string name="loading_message">Please wait&#8230;</string>
    <string name="opps">Opps!</string>
    <string name="action_choose">Choose an action</string>
    <string name="want_to_exit">Do you really want to exit?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="good">Good!</string>
    <string name="not_bad">Not bad!</string>
    <string name="bad">Bad!</string>
    <string name="try_all_correct_message">Your tries have corrected without any wrong. Wish you a best future!</string>
    <string name="try_average_correct_message">Your tries have corrected with less wrong. Learn more to best. Wish you a good future!</string>
    <string name="try_all_wrong_message">You may have not learned! Your tries have corrected with all wrong. Learn more to good. Hope you good in next time.</string>
    <string name="try_most_wrong_message">Your tries have corrected with most wrong. Learn more to good. Hope you good in next time</string>
    <string name="not_supported_sceneform">Your device is not supported this feature. To support your device requires Android N as well as OpenGL ES 3.0 or above capabilities.</string>
    <string name="find_the_correct">Find the correct</string>
    <string name="test_set">Test:</string>
    <string name="test_number_n_out_of">0/0</string>
    <string name="need_download_models">Need to download (for first time only) the models of this subject for real view. Would you like to download now?</string>
    <string name="developed_by">Developed by:</string>
</resources>