<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.com.almasud.Augmented_School.view.activity.HomeActivity">

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"/>

    <item android:id="@+id/action_more"
        android:title="@string/more"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_check_update"
                android:title="@string/action_check_update"
                android:icon="@drawable/ic_update" />

            <item
                android:id="@+id/action_report"
                android:title="@string/action_report"
                android:icon="@drawable/ic_report_problem" />

            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"
                android:icon="@drawable/ic_info"/>
        </menu>
    </item>

</menu>
