<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomeActivity">

    <include
        android:id="@+id/toolbarHome"
        layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/wrapperHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarHome"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:baselineAligned="false">

            <RelativeLayout
                android:id="@+id/wrapperLearn"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_round"
                android:onClick="onClickItem"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_half_margin"
                    android:src="@drawable/learn"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/learn"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/activity_half_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_3x_margin"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wrapperTest"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_round"
                android:onClick="onClickItem"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_half_margin"
                    android:scaleType="fitXY"
                    android:src="@drawable/test"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/activity_half_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_3x_margin"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wrapperScan"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/bg_round"
                android:onClick="onClickItem">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_half_margin"
                    android:src="@drawable/scan_book"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_book"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/activity_half_margin"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_3x_margin"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>